--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,7 @@
     <title><%= urlBase %></title>
   </head>
   <body>
+    <img src="/images/taskAppLogo.png" alt="Logo">
     <h1><%= urlBase %></h1>
     <p>Welcome <%= adminName %></p>
   </body>
